--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
   }
